--- a/app/views/trips/index.html.haml
+++ b/app/views/trips/index.html.haml
@@ -1,6 +1,7 @@
 = render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'trips'
 .clearfix.row#page-header{style: 'padding: 0px;'}
-  = link_to translate_helper("new_trip_link_text"), new_trip_path, :class=>'btn action-button pull-right'
+  - if can? :create, Trip
+    = link_to translate_helper("new_trip_link_text"), new_trip_path, :class=>'btn action-button pull-right'
   %h1= translate_helper("trips")+ ": " + format_time_as_title_for_listing_day(@start_pickup_date) + " - " + format_time_as_title_for_listing_day(@end_pickup_date)
   .clearfix
 
