--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -165,6 +165,35 @@
             </div>
           <% end %>
         </div><!-- END .panel -->
+
+        <div class="panel panel-primary">
+          <div class="panel-heading"><%= translate_helper("vehicle_maintenance_compliances_heading") %></div>
+          <table class="table table-striped table-condensed" id="vehicle_maintenance_compliances-table">
+            <thead>
+              <tr>
+                <th class="col-sm-3"><%= translate_helper("vehicle_maintenance_compliance_form_due_string") %></th>
+                <th><%= translate_helper("vehicle_maintenance_compliance_form_event") %></th>
+                <th class="col-sm-3"><%= translate_helper("vehicle_maintenance_compliance_form_compliance_date") %></th>
+                <% unless @readonly %><th class="col-sm-1"></th><% end %>
+              </tr>
+            </thead>
+            <tbody>
+              <% if @readonly and @vehicle.vehicle_maintenance_compliances.empty? %>
+                <tr>
+                  <td colspan="3"><%= translate_helper("vehicle_maintenance_compliances_empty") %></td>
+                </tr>
+              <% end %>
+              <%= render partial: 'vehicle_maintenance_compliances/vehicle_maintenance_compliance', collection: @vehicle.vehicle_maintenance_compliances %>
+            </tbody>
+          </table>
+          <% unless @readonly %>
+            <div class="panel-footer">
+              <div class="clearfix">
+                <%= link_to translate_helper("vehicle_maintenance_compliances_add_link_title"), new_vehicle_vehicle_maintenance_compliance_path(@vehicle), class: "btn action-button pull-right", remote: true %>
+              </div>
+            </div>
+          <% end %>
+        </div><!-- END .panel -->      
       <% end %>
     </div><!-- END .col-md-6 -->
   </div><!-- END .row -->
