--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -71,6 +71,14 @@
               <%= f.select :reportable, [["Yes", "true"], ["No", "false"]], {:selected => @vehicle.reportable.to_s }, class: "form-control", disabled: @readonly %>
             </div>
           </div>  
+          <div class="form-group">
+            <%= label_tag nil, translate_helper("vehicle_form_last_odometer_reading"), class: "col-md-2 control-label" %>
+            <div class="col-md-10">
+              <p class="form-control-static">
+                <%= number_to_human @vehicle.last_odometer_reading %> mi.
+              </p>
+            </div>
+          </div>  
         </div><!-- END .panel-body -->
       </div><!-- END .panel -->
 
