--- a/app/views/vehicles/_vehicle.html.erb
+++ b/app/views/vehicles/_vehicle.html.erb
@@ -26,4 +26,7 @@
   <td>
     <%= vehicle.active ? translate_helper("active") : translate_helper("inactive") %>
   </td>
+  <td>
+    <%= number_to_human vehicle.last_odometer_reading %> mi.
+  </td>
 </tr>
