--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -27,6 +27,7 @@
           <th class="col-sm-2"><%= translate_helper("vehicle_location") %></th>
           <th class="col-sm-2"><%= translate_helper("default_driver") %></th>
           <th><%= translate_helper("vehicle_form_active_label") %></th>
+          <th><%= translate_helper("vehicle_form_last_odometer_reading") %></th>
         </tr>
       </thead>
       <tbody>
