--- a/app/views/reports/donations.html.erb
+++ b/app/views/reports/donations.html.erb
@@ -1,9 +1,6 @@
-<%= render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'reports' %>
 <%= render 'custom_report_header'%>
-<div id="page-header" class="clearfix">
-  <h1><%= translate_helper("donation_report_heading") %></h1>
-</div>
 
+<div class="filter-form" style="padding-top: 10px;">
 <%= form_for @query, :url=>url_for(:action=>:donations), :html=>{:method=>:get} do |f| %>
   <fieldset>
     <p>
@@ -12,6 +9,7 @@
     </p>
   </fieldset>
 <% end %>
+</div>
 
 <table>
 <tr>
