--- a/app/views/reports/cctc_summary_report.html.erb
+++ b/app/views/reports/cctc_summary_report.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'reports' %>
+<%= render 'custom_report_header'%>
 <%= content_for :head do %>
 <style>
   table {
