--- a/app/views/reports/customer_receiving_trips_in_range.html.erb
+++ b/app/views/reports/customer_receiving_trips_in_range.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'reports' %>
+<%= render 'custom_report_header'%>
 <%= content_for :title, (translate_helper("crtr_report_title") + "#{@query.try(:start_date).try(:strftime, ": %B %Y")}#{@query.try(:start_date).try(:strftime, " - %B %Y")}") %>
 <div id="page-header" class="clearfix">
 <h1><%= translate_helper("crtr_verify_runs")%><%= @query.try(:start_date).try(:strftime, ": %B %Y") %><%= @query.try(:start_date).try(:strftime, " - %B %Y") %></h1>
@@ -11,7 +11,7 @@
         <%= f.date_select  :start_date, :order => [:month,:day,:year] %>
         <%= translate_helper("crtr_through")%> 
         <%= f.date_select  :before_end_date, :order => [:month,:day,:year] %>
-        <%= f.submit translate_helper("Update") %>
+        <%= f.submit translate_helper("update") %>
       </p>
     </fieldset>
   <% end %>
