--- a/app/views/reports/daily_trips.html.erb
+++ b/app/views/reports/daily_trips.html.erb
@@ -1,5 +1,5 @@
-<%= render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'reports' %>
 <% content_for(:title){translate_helper("daily_trips_title") + " #{@date.strftime('%v')}"} %>
+<%= render 'custom_report_header'%>
 <h1><%= translate_helper("daily_trips_heading") %></h1>
 <h2><%= format_date_for_daily_manifest @date %></h2>
 
