report header text tweaks

--- a/app/views/reporting/reports/_header.html.haml
+++ b/app/views/reporting/reports/_header.html.haml
@@ -4,7 +4,7 @@
       = button_tag type: :submit, id: 'runReporting', class: 'btn action-button controls' do
         = translate_helper(:run)
     %h1
-      = translate_helper(:report_parameters)
+      = translate_helper(:reports)
 
   :javascript
     $('#runReporting').on('click', function() {
