Adding feature spec for VehicleMaintenanceCompliances, updating document default_order scope, adding default_order scopes to driver tables and forms, adding column to display vehicle compliance state on index [finishes#98939254]

--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -28,6 +28,7 @@
           <th class="col-sm-2"><%= translate_helper("default_driver") %></th>
           <th><%= translate_helper("vehicle_form_active_label") %></th>
           <th><%= translate_helper("vehicle_form_last_odometer_reading") %></th>
+          <th><%= translate_helper("vehicle_overdue_events") %></th>
         </tr>
       </thead>
       <tbody>
