--- a/app/views/document_associations/_document_association_fields_for_associable.html.erb
+++ b/app/views/document_associations/_document_association_fields_for_associable.html.erb
@@ -1,7 +1,7 @@
 <tr class="fields">
   <td>
     <%= f.hidden_field :id %>
-    <%= f.collection_select :document_id, documents, :id, :description, { include_blank: true }, { class: "form-control" } %>
+    <%= f.collection_select :document_id, documents.order(description: :asc), :id, :description, { include_blank: true }, { class: "form-control" } %>
   </td>
   <td>
     <%= f.link_to_remove "X", class: "btn btn-danger btn-sm" %>
