--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -153,7 +153,7 @@
                   <td colspan="2"><%= translate_helper("driver_documents_empty") %></td>
                 </tr>
               <% end %>
-              <%= render partial: 'documents/document', collection: @driver.documents %>
+              <%= render partial: 'documents/document', collection: @driver.documents.default_order %>
             </tbody>
           </table>
           <% unless @readonly %>
@@ -181,7 +181,7 @@
                   <td colspan="2"><%= translate_helper("driver_histories_empty") %></td>
                 </tr>
               <% end %>
-              <%= render partial: 'driver_histories/driver_history', collection: @driver.driver_histories %>
+              <%= render partial: 'driver_histories/driver_history', collection: @driver.driver_histories.default_order %>
             </tbody>
           </table>
           <% unless @readonly %>
@@ -210,7 +210,7 @@
                   <td colspan="3"><%= translate_helper("driver_compliances_empty") %></td>
                 </tr>
               <% end %>
-              <%= render partial: 'driver_compliances/driver_compliance', collection: @driver.driver_compliances %>
+              <%= render partial: 'driver_compliances/driver_compliance', collection: @driver.driver_compliances.default_order %>
             </tbody>
           </table>
           <% unless @readonly %>
