--- a/app/views/vehicles/_vehicle.html.erb
+++ b/app/views/vehicles/_vehicle.html.erb
@@ -29,4 +29,7 @@
   <td>
     <%= number_to_human vehicle.last_odometer_reading %> mi.
   </td>
+  <td>
+    <%= vehicle.compliant? ? translate_helper("no") : translate_helper("yes") %>
+  </td>
 </tr>
