Adding vehicle warranty tables and remote forms to vehicle [#98940444]

--- a/app/views/vehicles/_vehicle.html.erb
+++ b/app/views/vehicles/_vehicle.html.erb
@@ -32,4 +32,7 @@
   <td>
     <%= vehicle.compliant? ? translate_helper("no") : translate_helper("yes") %>
   </td>
+  <td>
+    <%= vehicle.expired? ? translate_helper("yes") : translate_helper("no") %>
+  </td>
 </tr>
