--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -201,7 +201,35 @@
               </div>
             </div>
           <% end %>
-        </div><!-- END .panel -->      
+        </div><!-- END .panel -->
+
+        <div class="panel panel-primary">
+          <div class="panel-heading"><%= translate_helper("vehicle_warranties_heading") %></div>
+          <table class="table table-striped table-condensed" id="vehicle_warranties-table">
+            <thead>
+              <tr>
+                <th class="col-sm-3"><%= translate_helper("vehicle_warranty_form_expiration_date") %></th>
+                <th><%= translate_helper("vehicle_warranty_form_description") %></th>
+                <% unless @readonly %><th class="col-sm-1"></th><% end %>
+              </tr>
+            </thead>
+            <tbody>
+              <% if @readonly and @vehicle.vehicle_warranties.empty? %>
+                <tr>
+                  <td colspan="2"><%= translate_helper("vehicle_warranties_empty") %></td>
+                </tr>
+              <% end %>
+              <%= render partial: 'vehicle_warranties/vehicle_warranty', collection: @vehicle.vehicle_warranties.default_order %>
+            </tbody>
+          </table>
+          <% unless @readonly %>
+            <div class="panel-footer">
+              <div class="clearfix">
+                <%= link_to translate_helper("vehicle_warranties_add_link_title"), new_vehicle_vehicle_warranty_path(@vehicle), class: "btn action-button pull-right", remote: true %>
+              </div>
+            </div>
+          <% end %>
+        </div><!-- END .panel -->
       <% end %>
     </div><!-- END .col-md-6 -->
   </div><!-- END .row -->
