--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -141,6 +141,35 @@
     <div class="col-sm-12 col-md-6">
       <% if @vehicle.persisted? %>
         <div class="panel panel-primary">
+          <div class="panel-heading"><%= translate_helper("vehicle_documents_heading") %></div>
+          <table class="table table-striped table-condensed" id="documents-table">
+            <thead>
+              <tr>
+                <th class="col-sm-3"><%= translate_helper("document_form_upload_date") %></th>
+                <th><%= translate_helper("document_form_description") %></th>
+                <th class="col-sm-2"><%= translate_helper("document_form_file_size") %></th>
+                <th class="col-sm-1"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <% if @readonly and @vehicle.documents.empty? %>
+                <tr>
+                  <td colspan="2"><%= translate_helper("vehicle_documents_empty") %></td>
+                </tr>
+              <% end %>
+              <%= render partial: 'documents/document', collection: @vehicle.documents.default_order %>
+            </tbody>
+          </table>
+          <% unless @readonly %>
+            <div class="panel-footer">
+              <div class="clearfix">
+                <%= link_to translate_helper("vehicle_documents_add_link_title"), new_vehicle_document_path(@vehicle), class: "btn action-button pull-right", remote: true %>
+              </div>
+            </div>
+          <% end %>
+        </div><!-- END .panel -->
+
+        <div class="panel panel-primary">
           <div class="panel-heading"><%= translate_helper("vehicle_maintenance_events_heading") %></div>
           <table class="table table-striped table-condensed" id="vehicle-maintenance-events-table">
             <thead>
