Update faux strong parameters.  Use correct field for notes. fixes [#98940434]

--- a/app/views/trips/_find_or_create_address.html.erb
+++ b/app/views/trips/_find_or_create_address.html.erb
@@ -42,7 +42,7 @@
 
   <li class="selfclear">
     <%= label_tag "#{prefix}_notes", translate_helper("address_notes") %>
-    <%= text_area_tag "#{prefix}_notes", address.phone_number %>
+    <%= text_area_tag "#{prefix}_notes", address.notes %>
   </li>
   
   <li class="selfclear">
