--- a/app/views/addresses/edit.html.erb
+++ b/app/views/addresses/edit.html.erb
@@ -1,5 +1,5 @@
 <div id="page-header" class="clearfix">
-  <h1>translate_helper("editing_address")</h1>
+  <h1><%= translate_helper("editing_address") %></h1>
 </div>
 
 <div class="profile-actions selfclear">
