--- a/app/views/vehicle_warranties/_form.html.erb
+++ b/app/views/vehicle_warranties/_form.html.erb
@@ -44,6 +44,8 @@
           </div>
         </div><!-- END .panel-body -->
       </div><!-- END .panel -->
+      
+      <%= render partial: "document_associations/form_panel", locals: {f: f, documents: @vehicle_warranty.vehicle.documents} %>
     </div><!-- END .col-md-12 -->
   </div><!-- END .row -->
   
