Include notes in autocomplete javascript.  Fixes [#98940434]

--- a/app/views/trips/_javascript.html.erb
+++ b/app/views/trips/_javascript.html.erb
@@ -28,6 +28,7 @@
     form.find('#' + field + '_lat').val(address.lat);
     form.find('#' + field + '_lon').val(address.lon);
     form.find('#' + field + '_in_district').val(address.in_district);
+    form.find('#' + field + '_notes').val(address.notes);
   }
   
   function open_form_for_creating(field) {
