--- a/app/views/vehicle_maintenance_compliances/_form.html.erb
+++ b/app/views/vehicle_maintenance_compliances/_form.html.erb
@@ -67,6 +67,12 @@
               </div>
             </div>
           </div>
+          <div class="form-group">
+            <%= f.label :compliance_mileage, translate_helper("vehicle_maintenance_compliance_form_compliance_mileage"), class: "col-md-3 control-label" %>
+            <div class="col-md-9">
+              <%= f.number_field :compliance_mileage, min: 1, class: "form-control" %>
+            </div>
+          </div>
         </div><!-- END .panel-body -->
       </div><!-- END .panel -->
       
