--- a/app/views/vehicle_maintenance_compliances/_vehicle_maintenance_compliance.html.erb
+++ b/app/views/vehicle_maintenance_compliances/_vehicle_maintenance_compliance.html.erb
@@ -14,6 +14,11 @@
       <%= vehicle_maintenance_compliance.compliance_date.try(:to_s, :long) %>
     </p>
   </td>
+  <td>
+    <p class="form-control-static">
+      <%= number_with_delimiter vehicle_maintenance_compliance.compliance_mileage unless vehicle_maintenance_compliance.compliance_mileage.blank? %>
+    </p>
+  </td>
   <% unless @readonly %>
     <td>
       <%= link_to "X", polymorphic_path([vehicle_maintenance_compliance.vehicle, vehicle_maintenance_compliance]), remote: true, method: :delete, data: { confirm: translate_helper("vehicle_maintenance_compliance_delete_confirm") }, class: "btn btn-danger btn-sm pull-right" %>
