--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -211,13 +211,14 @@
                 <th class="col-sm-3"><%= translate_helper("vehicle_maintenance_compliance_form_due_string") %></th>
                 <th><%= translate_helper("vehicle_maintenance_compliance_form_event") %></th>
                 <th class="col-sm-3"><%= translate_helper("vehicle_maintenance_compliance_form_compliance_date") %></th>
+                <th class="col-sm-3"><%= translate_helper("vehicle_maintenance_compliance_form_compliance_mileage") %></th>
                 <% unless @readonly %><th class="col-sm-1"></th><% end %>
               </tr>
             </thead>
             <tbody>
               <% if @readonly and @vehicle.vehicle_maintenance_compliances.empty? %>
                 <tr>
-                  <td colspan="3"><%= translate_helper("vehicle_maintenance_compliances_empty") %></td>
+                  <td colspan="4"><%= translate_helper("vehicle_maintenance_compliances_empty") %></td>
                 </tr>
               <% end %>
               <%= render partial: 'vehicle_maintenance_compliances/vehicle_maintenance_compliance', collection: @vehicle.vehicle_maintenance_compliances.default_order %>
