Add reimbursement rates to cab rows, and individual trip rows [#98943678]

--- a/app/views/cab_trips/_grouped_cab_trips.html.erb
+++ b/app/views/cab_trips/_grouped_cab_trips.html.erb
@@ -10,5 +10,8 @@
         No trips
       <% end %>
     </td>
+    <td>
+      <%= reimbursement_cost_for_trips current_provider, @grouped_cab_trips[day.to_s] %>
+    </td>
   </tr>
 <% end %>
