--- a/app/views/cab_trips/edit_multiple.html.erb
+++ b/app/views/cab_trips/edit_multiple.html.erb
@@ -13,6 +13,7 @@
       <th><%= translate_helper("guest_count")%></th>
       <th><%= translate_helper("attendant_count")%></th>
       <th><%= translate_helper("result")%></th>
+      <th><%= translate_helper("trips_reimbursement_cost")%></th>
       <th></th>
     </tr>
     <% if @cab_trips.size > 0 %>
