--- a/app/views/cab_trips/index.html.erb
+++ b/app/views/cab_trips/index.html.erb
@@ -32,6 +32,7 @@
   <tr class="head">
     <th><%=translate_helper("date")%></th>
     <th></th>
+    <th><%=translate_helper("trips_reimbursement_cost")%></th>
   </tr>
   <%= render "grouped_cab_trips" %>
 </table>
