--- a/app/views/reports/show_trips_for_verification.html.erb
+++ b/app/views/reports/show_trips_for_verification.html.erb
@@ -29,6 +29,7 @@
       <th><%= translate_helper("guest_count") %></th>
       <th><%= translate_helper("attendant_count") %></th>
       <th><%= translate_helper("result") %></th>
+      <th><%= translate_helper("trips_reimbursement_cost") %></th>
       <th></th>
       <th></th>
     </tr>
