Provide a way for providers to update the fields they want to require for runs to be considered complete [finishes#98943684]

--- a/app/views/providers/_form.html.erb
+++ b/app/views/providers/_form.html.erb
@@ -26,6 +26,11 @@
         <%= f.label :allow_trip_entry_from_runs_page, translate_helper("provider_form_trip_entry_from_runs") %>
         <%= f.check_box :allow_trip_entry_from_runs_page %>
       </li>
+      
+      <li>
+        <%= f.label :fields_required_for_run_completion, translate_helper("provider_form_fields_required_for_run_completion") %>
+        <%= f.select :fields_required_for_run_completion, Run::FIELDS_FOR_COMPLETION, { prompt: "Select Required Fields" }, { multiple: true, size: Run::FIELDS_FOR_COMPLETION.size } %>
+      </li>
     </ol>
 
     <div class="actions">
