--- a/app/assets/stylesheets/reports_print.scss
+++ b/app/assets/stylesheets/reports_print.scss
@@ -1,45 +1,34 @@
 /*
  *
- * Print Stylesheet
+ * Reports Print Stylesheet
  *
  */
 
-/* Base Print Style Reset */
-* { background: transparent !important; color: #000 !important; text-shadow: none !important; 
-    -moz-box-shadow: none !important; -webkit-box-shadow: none !important; box-shadow: none !important;}
-a, a:visited { text-decoration: underline; color: blue !important; }
-a:after { content: " (" attr(href) ")"; } 
-abbr:after { content: " (" attr(title) ")"; }
-.ir a:after { content: ""; }  /* Don't show links for images */
-pre, blockquote { border: 1px solid #999; page-break-inside: avoid; }
-thead { display: table-header-group; } /* css-discuss.incutio.com/wiki/Printing_Tables */ 
-tr, img { page-break-inside: avoid; }
-@page { margin: 0.5cm; }
-p, h2, h3 { orphans: 3; widows: 3; }
-h2, h3{ page-break-after: avoid; }
-
-body {
-  font-family: "Helvetica Neue",Arial,Helvetica,sans-serif;
-  background: white;
-  font-size: 9pt;
+#session-timeout-warning, 
+#header, 
+#crossbar, 
+#page-header, 
+#new_query,
+#messages,
+.info-header,
+.reporting-reports-list,
+.filter-form,
+.action-button,
+#footer { 
+  display: none; 
+  clear: both; 
 }
 
-/* hide stuff */
-#crossbar,
-#login-area,
-#subnav,
-#calendar,
-.action-bttn,
-form.customer-search { display: none; clear: both; }
-
-
-/* format stuff */
+/* RE-ENABLE AS NECESSARY */
+/*
 #header {
   margin: 0 auto 1em;
 }
+
 #header a {
   text-decoration: none;
 }
+
 table {
   border-collapse: collapse;
 }
@@ -278,4 +267,4 @@ dd.hand-completed {
   width: 4in;
   border-bottom: 2px solid black;
 }
-
+*/
