Refactoring and linting dispatch and other google map related javascripts, in prep for [#98943666]

--- a/app/assets/stylesheets/v1_theme.scss
+++ b/app/assets/stylesheets/v1_theme.scss
@@ -1481,7 +1481,7 @@ body.dispatch {
   float: left;
 }
 
-.dispatch .column_wrapper #map-container {
+.dispatch .column_wrapper #map {
   width: 79%;
   min-height: 300px;
 }
