--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -1,3 +1,4 @@
+<% google_maps_callbacks = [] %>
 <%= render 'shared/highlight_active_tab_js', is_primary_nav: false, tab_class: 'vehicles-drivers-users' %>
 <div id="page-header" class="clearfix">
   <h1><%= translate_helper("show_provider_heading", provider: @provider.name) %></h1>
@@ -439,13 +440,13 @@
         <td><%= label_tag translate_helper("latitude") %></td>
         <td>
           <%= text_field_tag :region_north, nw_y %>
-          <span class="hint">(e.g. 45.971)</span>
+          <span class="hint">(e.g. <%= GOOGLE_MAP_DEFAULTS[:bounds][:north] %>)</span>
         </td>
       <tr>
         <td><%= label_tag translate_helper("longitude") %></td>
         <td>
           <%= text_field_tag :region_west, nw_x %>
-          <span class="hint">(e.g. -123.358)</span>
+          <span class="hint">(e.g. <%= GOOGLE_MAP_DEFAULTS[:bounds][:west] %>)</span>
         </td>
       </tr>
       <tr><th colspan="2"><h3><%= translate_helper("southeast_corner") %></h3></th></tr>
@@ -453,14 +454,14 @@
         <td><%= label_tag translate_helper("latitude") %></td>
         <td>
           <%= text_field_tag :region_south, se_y %>
-          <span class="hint">(e.g. 45.342)</span>
+          <span class="hint">(e.g. <%= GOOGLE_MAP_DEFAULTS[:bounds][:south] %>)</span>
         </td>
       </tr>
       <tr>
         <td><%= label_tag translate_helper("longitude") %></td>
         <td>
           <%= text_field_tag :region_east, se_x %>
-          <span class="hint">(e.g. -121.922)</span>
+          <span class="hint">(e.g. <%= GOOGLE_MAP_DEFAULTS[:bounds][:east] %>)</span>
         </td>
       </tr>
       <tr>
@@ -472,6 +473,31 @@
   </div>
   <% if @provider.region_nw_corner and @provider.region_se_corner %>
     <div id="region-preview"></div>
+    <%= javascript_tag do %>
+      function readyRegionPreview () {
+        // Size the map to be the same as the form height.
+        $("#region-preview").height($("#region-form").height() - 15);
+    
+        var region_preview = new GoogleMap($("#region-preview"), {
+          north: <%= @provider.region_nw_corner.y %>,
+          west:  <%= @provider.region_nw_corner.x %>,
+          south: <%= @provider.region_se_corner.y %>,
+          east:  <%= @provider.region_se_corner.x %>
+        }, GoogleMapDefaults.viewport);
+
+        if (region_preview.errors.length > 0) {
+          html = "<h3>Boundary Errors</h3><ul>";
+          for (i in region_preview.errors) {
+            html += '<li>' + region_preview.errors[i] + '</li>';
+          }
+          html += '</ul>';
+          $("#region-preview").css("border", "none").addClass("error").append(html);
+        } else {
+          region_preview.display_region();
+        }
+      }
+    <% end %>
+    <% google_maps_callbacks << "readyRegionPreview" %>
   <% end %>
 </div>
 <div class="clearfix"></div>
@@ -497,13 +523,13 @@
         <td><%= label_tag translate_helper("latitude") %></td>
         <td>
           <%= text_field_tag :viewport_lat, center_lat %>
-          <span class="hint">(e.g. 45.523)</span>
+          <span class="hint">(e.g. <%= GOOGLE_MAP_DEFAULTS[:viewport][:center_lat] %>)</span>
         </td>
       <tr>
         <td><%= label_tag translate_helper("longitude") %></td>
         <td>
           <%= text_field_tag :viewport_lng, center_lng %>
-          <span class="hint">(e.g. -122.676)</span>
+          <span class="hint">(e.g. <%= GOOGLE_MAP_DEFAULTS[:viewport][:center_lng] %>)</span>
         </td>
       </tr>
       <tr>
@@ -512,9 +538,8 @@
       <tr>
         <td><%= label_tag translate_helper("zoom") %></td>
         <td>
-          <%= select_tag :viewport_zoom, options_for_select(@zoom_choices,
-                [@provider.viewport_zoom.to_s, @provider.viewport_zoom.to_s]) %>
-          <span class="hint">(e.g. 11)</span>
+          <%= select_tag :viewport_zoom, options_for_select(@zoom_choices, [@provider.viewport_zoom.to_s, @provider.viewport_zoom.to_s]) %>
+          <span class="hint">(e.g. <%= GOOGLE_MAP_DEFAULTS[:viewport][:zoom] %>)</span>
         </td>
       </tr>
       <tr>
@@ -526,63 +551,39 @@
   </div>
   <% if @provider.viewport_center and @provider.viewport_zoom %>
     <div id="viewport-preview"></div>
+    <%= javascript_tag do %>
+      function readyViewportPreview () {
+        $("#viewport-preview").height($("#viewport-form").height() - 15);
+    
+        var viewport_preview = new GoogleMap($("#viewport-preview"), GoogleMapDefaults.bounds, {
+          center_lat: <%= @provider.viewport_center.y %>,
+          center_lng: <%= @provider.viewport_center.x %>,
+          zoom:       <%= @provider.viewport_zoom %>
+        });
+
+        if (viewport_preview.errors.length < 0) {
+          html = '<h3>Viewport Errors</h3><ul>';
+          for (i in viewport_preview.errors) {
+            html += '<li>' + viewport_preview.errors[i] + '</li>';
+          }
+          html += '</ul>';
+          $('#viewport-preview').css('border', 'none').addClass('error').append(html);
+        } else {
+          viewport_preview.display_viewport();
+        }
+      }
+    <% end %>
+    <% google_maps_callbacks << "readyViewportPreview" %>
   <% end %>
 </div>
 <div class="clearfix"></div>
-
-<script type="text/javascript" charset="utf-8">
-  if ( window.location.protocol == "https:" )
-    document.write('<scr' + 'ipt type="text/javascript" src="https://maps-api-ssl.google.com/maps/api/js?v=3.12&sensor=false"></scr' + 'ipt>');
-  else
-    document.write('<scr' + 'ipt type="text/javascript" src="http://maps.google.com/maps/api/js?v=3.12&sensor=false"></scr' + 'ipt>');
-</script>
-
-<% if @provider.region_nw_corner and @provider.region_se_corner %>
-<script type="text/JavaScript" charset="utf-8">
-  $(document).ready(function() {
-    // Size the map to be the same as the form height.
-    $("#region-preview").height($("#region-form").height() - 15);
-
-    errors = display_region($("#region-preview"), {
-      north: <%= @provider.region_nw_corner.y %>,
-      west:  <%= @provider.region_nw_corner.x %>,
-      south: <%= @provider.region_se_corner.y %>,
-      east:  <%= @provider.region_se_corner.x %>
+<% content_for :footer do %>
+  <%= javascript_tag do %>
+    $(document).ready(function() {
+      <% google_maps_callbacks.each do |callback| %>
+        <%= "#{callback}();" %>
+      <% end %>
     });
-    if (errors) {
-      html = "<h3>Boundary Errors</h3><ul>";
-      for (i in errors) {
-        html += '<li>' + errors[i] + '</li>';
-      }
-      html += '</ul>';
-      $("#region-preview").css("border", "none");
-      $("#region-preview").addClass("error");
-      $("#region-preview").append(html);
-    }
-  });
-</script>
-<% end %>
-
-<% if @provider.viewport_center and @provider.viewport_zoom %>
-<script type="text/JavaScript" charset="utf-8">
-  $(document).ready(function() {
-    $("#viewport-preview").height($("#viewport-form").height() - 15);
-
-    errors = display_viewport($("#viewport-preview"), {
-      center_lat: <%= @provider.viewport_center.y %>,
-      center_lng: <%= @provider.viewport_center.x %>,
-      zoom:       <%= @provider.viewport_zoom %>
-    });
-    if (errors) {
-      html = '<h3>Viewport Errors</h3><ul>';
-      for (i in errors) {
-        html += '<li>' + errors[i] + '</li>';
-      }
-      html += '</ul>';
-      $('#viewport-preview').css('border', 'none');
-      $('#viewport-preview').addClass('error');
-      $('#viewport-preview').append(html);
-    }
-  });
-</script>
+  <% end %>
+  <%= render "shared/google_maps/content_for_footer" %>
 <% end %>
