--- a/app/views/reports/daily_manifest.html.erb
+++ b/app/views/reports/daily_manifest.html.erb
@@ -13,6 +13,11 @@
     
       .manifest-map {
         page-break-inside: avoid;
+        page-break-after: always;
+      }
+    
+      .manifest-map:last-of-type {
+        page-break-after: avoid;
       }
     
       .manifest-break {
@@ -51,24 +56,21 @@
       var mapping_errors = [];
       var markers = [];
       $.when(
-        <% trips.each_with_index do |trip, index| %>
-          <% pin_color = cycle %w(black brown green purple yellow blue gray orange red white) %>
-          <% [:pickup, :dropoff].each_with_index do |address_type, index_2| %>
-            $.Deferred(function(deferred) {
-              geocoder.geocode({address: "<%= j trip.send("#{address_type}_address").address_text %>"}, function(results, status) {
-                if (status == google.maps.GeocoderStatus.OK) {
-                  var result = results[0];
-                  var marker = "color:<%= pin_color %>|label:<%= index + 1 %>|" + result.geometry.location.toUrlValue();
-                  markers.push(encodeURI(marker));
-                } else if (status == google.maps.GeocoderStatus.ZERO_RESULTS) {
-                  mapping_errors.push("No results found.");
-                } else {
-                  mapping_errors.push("Unable to locate address: " + status);
-                }
-                deferred.resolve();
-              });
-            }).promise()<%= "," unless index_2 == 1 and (index + 1) == trips.size %>
-          <% end %>
+        <% (ordered_addresses = ordered_pickup_and_dropoff_addresses(trips)).each_with_index do |address, index| %>
+          $.Deferred(function(deferred) {
+            geocoder.geocode({address: "<%= j address.address_text %>"}, function(results, status) {
+              if (status == google.maps.GeocoderStatus.OK) {
+                var result = results[0];
+                var marker = "label:<%= index + 1 %>|" + result.geometry.location.toUrlValue();
+                markers.push(encodeURI(marker));
+              } else if (status == google.maps.GeocoderStatus.ZERO_RESULTS) {
+                mapping_errors.push("No results found.");
+              } else {
+                mapping_errors.push("Unable to locate address: " + status);
+              }
+              deferred.resolve();
+            });
+          }).promise()<%= "," unless index + 1 == ordered_addresses.size %>
         <% end %>
       ).done(function() {
         if (markers.length > 0) {
