--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -28,6 +28,7 @@
     <%= render 'date_time_panel', f: f, edit_mode: edit_mode %>
   </div>
   <div class="col-sm-12 col-md-6">
+    <%= render 'repetition_panel', f: f %>
     <%= render 'vehicle_panel', f: f %>
     <%= render 'driver_panel', f: f %>
   </div>
