Fix label and field type for services_performed field

--- a/app/views/vehicle_maintenance_events/_form.html.erb
+++ b/app/views/vehicle_maintenance_events/_form.html.erb
@@ -74,16 +74,9 @@
             </div>
           </div>  
           <div class="form-group">
-            <%= f.label :services_performed, translate_helper("service_date"), class: "col-md-3 control-label" %>
+            <%= f.label :services_performed, translate_helper("services_performed"), class: "col-md-3 control-label" %>
             <div class="col-md-9">
-              <div class="input-group datepicker-icon">
-                <%= f.text_field :services_performed, class: "form-control datepicker" %>
-                <div class="input-group-btn">
-                  <button class="btn btn-default" type="button">
-                    <%= image_tag "calendar-clock.png" %>
-                  </button>
-                </div>
-              </div>
+              <%= f.text_area :services_performed, class: "form-control", rows: 3 %> %>
             </div>
           </div>
         </div><!-- END .panel-body -->
