updated customer tab UIs to be consistent with other tabs

--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -1,43 +1,1 @@
-<%= render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'customers' %>
-<div id="page-header" class="clearfix">
-  <h1><%= translate_helper("editing_customer", customer_name: @customer.name) %></h1>
-</div>
-
-<%= link_to translate_helper("cancel"), @customer, :class=>'cancel'  %>
-
-<%= form_for @customer, :url=>customer_inactivate_path(@customer), :html=>{:method=>:post} do |f| %>
-
-  <p class="activation-dates">
-    <% if @customer.inactivated_date %>
-
-      <% if @customer.activated_date %>
-        <strong><%= translate_helper("activated_date")%></strong><% @customer.activated_date %>
-      <% end %>
-
-      <span class="separator">|</span>
-
-      <strong><%=translate_helper("inactivated_date")%></strong> <%= @customer.inactivated_date %>
-
-    <% else %>
-
-      <% if @customer.activated_date %>
-        <strong><%= translate_helper("activated_date") %></strong> <%= @customer.activated_date %>
-      <% end %>
-
-      <span class="separator">|</span>
-
-      <%= f.label :inactivated_reason, translate_helper("inactivation_reason") %>
-      <%= f.text_field :inactivated_reason %>
-      <%= f.submit translate_helper("inactivate") %>
-
-    <% end %>
-    
-  </p>
-
-<% end %>
-
-<%= render 'form' %>
-
-<hr />
-
-<%= link_to translate_helper("back"), customers_path, :class=>'action-bttn' %>
+<%= render 'form', edit_mode: :edit, is_group: @customer.group %>
