--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -1,6 +1,6 @@
 <%= render 'form', edit_mode: :show %>
 
 <script type='text/javascript'>
-  $("form :input").attr("disabled","disabled");
+  $(".run_form :input").attr("disabled","disabled");
 </script>
 
