--- a/app/views/customers/_addresses_panel.html.haml
+++ b/app/views/customers/_addresses_panel.html.haml
@@ -5,3 +5,5 @@
     %h3.panel-title
       = translate_helper(:customer_addresses_panel)
   .panel-body{style: 'padding: 5px;'}
+    = f.fields_for :address, @customer.address do |address_form|
+      = render 'addresses/bootstrap_form', :form=>address_form, :editing_address => false
