Make driver and vehicle modal dialog use the same ID so documents scripts can reference them regardless of parent type [#98940448]

--- a/app/views/driver_compliances/create.js.erb
+++ b/app/views/driver_compliances/create.js.erb
@@ -1,2 +1,2 @@
-$('#driver-form-modal-dialog').modal('hide');
+$('#modal-dialog').modal('hide');
 $("<%= j (render @driver_compliance) %>").hide().appendTo('#driver_compliances-table tbody').slideDown('slow');
