--- a/app/views/vehicle_maintenance_compliances/create.js.erb
+++ b/app/views/vehicle_maintenance_compliances/create.js.erb
@@ -1,2 +1,2 @@
-$('#vehicle-form-modal-dialog').modal('hide');
+$('#modal-dialog').modal('hide');
 $("<%= j (render @vehicle_maintenance_compliance) %>").hide().appendTo('#vehicle_maintenance_compliances-table tbody').slideDown('slow');
