--- a/app/views/vehicle_maintenance_events/create.js.erb
+++ b/app/views/vehicle_maintenance_events/create.js.erb
@@ -1,2 +1,2 @@
-$('#vehicle-form-modal-dialog').modal('hide');
+$('#modal-dialog').modal('hide');
 $("<%= j (render @vehicle_maintenance_event) %>").hide().appendTo('#vehicle-maintenance-events-table tbody').slideDown('slow');
