--- a/app/views/vehicle_warranties/create.js.erb
+++ b/app/views/vehicle_warranties/create.js.erb
@@ -1,2 +1,2 @@
-$('#vehicle-form-modal-dialog').modal('hide');
+$('#modal-dialog').modal('hide');
 $("<%= j (render @vehicle_warranty) %>").hide().appendTo('#vehicle_warranties-table tbody').slideDown('slow');
