--- a/app/views/documents/new.js.erb
+++ b/app/views/documents/new.js.erb
@@ -1,3 +1,3 @@
-$('#driver-form-modal-dialog .modal-body .container-fluid').html("<%= j (render partial: 'form', locals: {remote: true}) %>");
-$('#driver-form-modal-dialog .modal-title').html("<%= j translate_helper('document_form_new_heading') %>");
-$('#driver-form-modal-dialog').modal('show');
+$('#modal-dialog .modal-body .container-fluid').html("<%= j (render partial: 'form', locals: {remote: true}) %>");
+$('#modal-dialog .modal-title').html("<%= j translate_helper('document_form_new_heading') %>");
+$('#modal-dialog').modal('show');
