--- a/app/views/documents/update.js.erb
+++ b/app/views/documents/update.js.erb
@@ -1,4 +1,4 @@
-$('#driver-form-modal-dialog').modal('hide');
+$('#modal-dialog').modal('hide');
 var $new_row = $("<%= j (render @document) %>").hide();
 $('#documents-table .document-<%= @document.id %>').slideUp('fast').replaceWith($new_row);
 $new_row.slideDown('slow');
