--- a/app/views/driver_histories/create.js.erb
+++ b/app/views/driver_histories/create.js.erb
@@ -1,2 +1,2 @@
-$('#driver-form-modal-dialog').modal('hide');
+$('#modal-dialog').modal('hide');
 $("<%= j (render @driver_history) %>").hide().appendTo('#driver_histories-table tbody').slideDown('slow');
