--- a/app/views/driver_histories/edit.js.erb
+++ b/app/views/driver_histories/edit.js.erb
@@ -1,6 +1,6 @@
 var $new_form = $("<%= j (render partial: 'form', locals: {remote: true}) %>");
 $new_form.find('input.datepicker').datepicker({dateFormat: 'yy-mm-dd', showButtonPanel: true}).css('z-index', 9999);
 
-$('#driver-form-modal-dialog .modal-body .container-fluid').html($new_form);
-$('#driver-form-modal-dialog .modal-title').html("<%= j translate_helper('driver_history_form_edit_heading') %>");
-$('#driver-form-modal-dialog').modal('show');
+$('#modal-dialog .modal-body .container-fluid').html($new_form);
+$('#modal-dialog .modal-title').html("<%= j translate_helper('driver_history_form_edit_heading') %>");
+$('#modal-dialog').modal('show');
