--- a/app/views/driver_histories/update.js.erb
+++ b/app/views/driver_histories/update.js.erb
@@ -1,4 +1,4 @@
-$('#driver-form-modal-dialog').modal('hide');
+$('#modal-dialog').modal('hide');
 var $new_row = $("<%= j (render @driver_history) %>").hide();
 $('#driver_histories-table .driver_history-<%= @driver_history.id %>').slideUp('fast').replaceWith($new_row);
 $new_row.slideDown('slow');
