--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -232,7 +232,7 @@
 
 <%= render 'shared/hide_invisible_form_fields_js', model_name: "driver", table_name: 'drivers', provider_id:  current_provider.try(:id) %>
 
-<%= render 'shared/modal_dialog', modal_id: "driver-form-modal-dialog" %>
+<%= render 'shared/modal_dialog', modal_id: "modal-dialog" %>
 
 <%= javascript_tag do %>
   $(document).ready(function(){
