--- a/app/views/vehicle_maintenance_compliances/update.js.erb
+++ b/app/views/vehicle_maintenance_compliances/update.js.erb
@@ -1,4 +1,4 @@
-$('#vehicle-form-modal-dialog').modal('hide');
+$('#modal-dialog').modal('hide');
 var $new_row = $("<%= j (render @vehicle_maintenance_compliance) %>").hide();
 $('#vehicle_maintenance_compliances-table .vehicle_maintenance_compliance-<%= @vehicle_maintenance_compliance.id %>').slideUp('fast').replaceWith($new_row);
 $new_row.slideDown('slow');
