--- a/app/views/vehicle_warranties/update.js.erb
+++ b/app/views/vehicle_warranties/update.js.erb
@@ -1,4 +1,4 @@
-$('#vehicle-form-modal-dialog').modal('hide');
+$('#modal-dialog').modal('hide');
 var $new_row = $("<%= j (render @vehicle_warranty) %>").hide();
 $('#vehicle_warranties-table .vehicle_warranty-<%= @vehicle_warranty.id %>').slideUp('fast').replaceWith($new_row);
 $new_row.slideDown('slow');
