--- a/app/views/cab_trips/index.html.erb
+++ b/app/views/cab_trips/index.html.erb
@@ -28,7 +28,7 @@
   </span>
 </h2>
 
-<table id="cab_trips">
+<table id="cab_trips" class="table table-striped table-bordered" >
   <tr class="head">
     <th><%=translate_helper("date")%></th>
     <th></th>
