--- a/app/views/customers/_customer_listing.html.erb
+++ b/app/views/customers/_customer_listing.html.erb
@@ -1,5 +1,5 @@
 
-<table class="customer-list">
+<table class="customer-list table table-striped table-bordered" >
   <thead>
     <tr>
       <th></th>
