--- a/app/views/customers/_common_addresses_panel.html.haml
+++ b/app/views/customers/_common_addresses_panel.html.haml
@@ -6,11 +6,11 @@
     %h3.panel-title
       = translate_helper(:customer_addresses_panel)
   .panel-body{style: 'padding: 5px;'}
-    %table.table
+    %table.table.table-striped.table-bordered#customerCommonAddressTable
       %thead
         %tr
           - if is_editing
-            %th
+            %th{width: 50}
           %th
             = translate_helper(:address_nickname)
           %th
@@ -19,15 +19,18 @@
             = translate_helper(:is_mailing_address)
       %tbody
         - @customer.addresses.each do |address|
-          %tr
+          %tr{data: {address: address.to_json}}
             - if is_editing
               %td
+                = button_tag :type => 'button', class: 'deleteCustomerAddress btn-danger' do 
+                  = translate_helper(:delete)
             %td
               = address.name
+              = link_to " (" + translate_helper(:view_address_details) + ")", '#', class: 'viewAddress'
             %td
               = address.address_text
             %td
-              = radio_button_tag(:mailing)
+              = radio_button_tag(:mailing, address == @customer.address)
     - if is_editing
       .pull-right
         %button.btn.action-button#addCustomerCommonAddress
