--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -51,7 +51,7 @@
 <% end %>
 
 <%= render 'inactivate_dialog' if edit_mode == :edit %>
-<%= render 'add_address_dialog' if edit_mode == :edit || edit_mode == :new %>
+<%= render 'add_address_dialog' %>
 
 
 <script>
