--- a/app/views/customers/_add_address_dialog.html.haml
+++ b/app/views/customers/_add_address_dialog.html.haml
@@ -9,6 +9,8 @@
       e.preventDefault();
       var form = $("#customer-address-form");
       form.dialog( "open" );  
+      $(".address-form :input").removeAttr("disabled");
+      $('.ui-dialog button').show();
       form.find('form')[0].reset();
       form.find('.error').remove();
     });
@@ -23,6 +25,8 @@
       e.preventDefault();
 
       $("#customer-address-form").dialog( "open" );
+      $(".address-form :input").attr("disabled","disabled");
+      $('.ui-dialog button').hide();
       populate_address_form( 'customer', $(this).parents('tr').data('address'));
     });
   });
