[fixes#103266442] append name to run table

--- a/app/views/runs/_list.html.haml
+++ b/app/views/runs/_list.html.haml
@@ -1,6 +1,7 @@
 %table
   %tr
     %th
+    %th= translate_helper("run_name_column")
     %th= translate_helper("run_date_column")
     %th= translate_helper("run_start_time_column")
     %th= translate_helper("run_end_time_column") 
